--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <p class="d-inline-block fat">275 River Road, North Arlington, NJ</p>
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
-
+<div class="bg-success">
+    <div class="w-300 centermargin">
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -69,13 +70,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/birds.jpg" class="d-block w-100" height="500px" alt="...">
+                <img src="images/birds.jpg" class="d-block w-100" height="600px" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="images/mumyard.jpeg" class="d-block w-100" height="500px" alt="...">
+                <img src="images/mumyard.jpeg" class="d-block w-100" height="600px" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="images/charlieshome.webp" class="d-block w-100" height="500px" alt="...">
+                <img src="images/charlieshome.webp" class="d-block w-100" height="600px" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -87,11 +88,8 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-
-    <div class="col-sm-4  text-center">
-        <h2>h2 Bootstrap heading (24px)</h2>
-        <h3>h2 Bootstrap heading (18px)</h3>
     </div>
+</div>
 </div>
  <footer class="footer page-footer font-small ">
      <div class="container">
