--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p class="d-inline-block fat">275 River Road, North Arlington, NJ</p>
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
-<div class="bg-success">
+<div class="bg-success pt-3">
     <div class="w-300 centermargin">
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
@@ -90,7 +90,21 @@
           </div>
     </div>
 </div>
+
+<div class="bg-success">
+    <h1 class="text-center">Charlie's Nursery & Garden Center</h1>
+    <p>
+        Charlie's Nursey and Garden Center is a family owned & operated garden center since 1971. In 2010, Nick Sr. and his two sons, Nick Jr. and Joe purchased the nursery from the original Charlie and his family. Just like them, we strive to give our customers the best customer service,  support, knowledge and garden center experience that we can. We take pride in what we have done in the past and excited about where we are going in the future! 
+    </p>
+    <p>
+        We worked for many years on the other side of town at Arlington Florist on Schuyler Ave with our family. Now, we've brought that knowledge and those items to Charlie's; espcially when it comes to our popular hand made grave blankets during christmas time!
+    </p>
+        
 </div>
+
+
+</div>
+
  <footer class="footer page-footer font-small ">
      <div class="container">
         <div class="row">
