--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     </div>
 </div>
 
-<div class="bg-success">
+<div class="bg-success pb-4">
     <h1 class="text-center">Charlie's Nursery & Garden Center</h1>
-    <p>
+    <p class="text-center">
         Charlie's Nursey and Garden Center is a family owned & operated garden center since 1971. In 2010, Nick Sr. and his two sons, Nick Jr. and Joe purchased the nursery from the original Charlie and his family. Just like them, we strive to give our customers the best customer service,  support, knowledge and garden center experience that we can. We take pride in what we have done in the past and excited about where we are going in the future! 
     </p>
-    <p>
+    <p class="text-center">
         We worked for many years on the other side of town at Arlington Florist on Schuyler Ave with our family. Now, we've brought that knowledge and those items to Charlie's; espcially when it comes to our popular hand made grave blankets during christmas time!
     </p>
         
