--- a/grave.html
+++ b/grave.html
@@ -61,14 +61,44 @@
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
 
-    <div class="row justify-content-center">
-        <div class="col-4 bg-danger">
-          One of two columns
+    <div class="row justify-content-center bg-success pt-3 pb-3">
+        <div class="col-4">
+          <img src="images/small_flat.webp" alt="small flat grave blanket" height="250px" class="d-block centermargin">
         </div>
-        <div class="col-4 bg-dark">
-          One of two columns
+        <div class="col-4 text-center">
+          <h2 class="pb-4">Small Flat</h2>
+          <p>
+            Our most popular blanket. Shows great at the Cemtery as it's full of poinsettias and decorations. Fits the standard size grave stone.
+          </p>
+          <p class="fw-bold">$24.99</p>
         </div>
-      </div>
+    </div>
+
+    <div class="row justify-content-center bg-success pt-3 pb-3">
+        <div class="col-4 text-center">
+            <h2 class="pb-4">Medium Flat</h2>
+            <p>
+                Longer than the 'Small Flat' with more decorations. Great for a double stone plot.
+            </p>
+            <p class="fw-bold">$34.99</p>
+          </div>
+        <div class="col-4">
+          <img src="images/med_flat.webp" alt="medium flat grave blanket" height="250px" class="d-block centermargin">
+        </div>
+    </div>
+
+    <div class="row justify-content-center bg-success pt-3 pb-5">
+        <div class="col-4">
+          <img src="images/Large_Pine.webp" alt="Large Pine Puff grave blanket" height="250px" class="d-block centermargin">
+        </div>
+        <div class="col-4 text-center">
+          <h2 class="pb-4">Large Pine Puff</h2>
+          <p>
+            Largest size blanket we make aside from our 4-5' cross. Same look as the medium Pine blankets, just longer with extra decorations.
+          </p>
+          <p class="fw-bold">$79.99</p>
+        </div>
+    </div>
 
 </div>
  <footer class="footer page-footer font-small ">
