--- a/grave.html
+++ b/grave.html
@@ -11,7 +11,7 @@
     <link href="css/main.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="bg-success">
 <div class="container-fluid">
     <div class="row">
             <nav class="navbar navbar-expand-md
