--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                             </a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#">Sod</a>
-                                <a class="dropdown-item" href="#">Indoor Plants</a>
-                                <a class="dropdown-item" href="#">Link 3</a>
-                                <a class="dropdown-item" href="#">Link 4</a>
+                                <a class="dropdown-item" href="#">Cemetary</a>
                             </div>
                         </li>
                     </ul>
