--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="grave.html">Grave Blankets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Plants</a>
+                            <a class="nav-link" href="plants.html">Plants</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
