--- a/plants.html
+++ b/plants.html
@@ -11,7 +11,7 @@
     <link href="css/main.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="bg-success">
 <div class="container-fluid">
     <div class="row">
             <nav class="navbar navbar-expand-md
@@ -20,7 +20,7 @@
                     col-12">
 
                 <!-- Brand -->
-                <a class="navbar-brand" href="index.html"><img src="images/charlieslogo.gif" height="75px"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/charlieslogo.gif" height="75px" alt="Charlie's Logo"></a>
                 <!-- Responsive Button for the smaller menu -->
                 <button class="navbar-toggler soap" type="button"
                         data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -53,39 +53,16 @@
                     </ul>
                 </div>
             </nav>
+        
         <div class="d-flex bg-dark text-light">
             <p class="d-inline-block fat">275 River Road, North Arlington, NJ</p>
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
-        <div class="container">
-          <div class="row">
-            <form action="">
-                <div class="form-group">
-                    <label for="firstname">First Name:</label>
-                    <input type="text" class="form-control" id="firstname"
-                           placeholder="First name" name="firstname">
-                </div>
-                <div class="form-group">
-                    <label for="lastname">Last Name:</label>
-                    <input type="text" class="form-control" id="lastname"
-                           placeholder="Last name" name="lastname">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email"
-                           placeholder="Enter email" name="email">
-                </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input"
-                               type="checkbox" name="subscribe"> Subscribe
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </row>
+
+
+    </div>
+
 </div>
-        </div>
  <footer class="footer page-footer font-small ">
      <div class="container">
         <div class="row">
