--- a/plants.html
+++ b/plants.html
@@ -59,6 +59,59 @@
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
 
+        <div class="row pt-3">
+            <div class="col-12 col-lg-4 pb-3">
+                <div class="card d-block centermargin" style="width: 18rem;">
+                    <img src="images/swiss.png" class="card-img-top" alt="Swiss Cheese Plant">
+                    <div class="card-body">
+                      <p class="card-text">The Swiss Cheese plant likes bright indirect light and to be watered around once every 2 weeks.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-12 col-lg-4 pb-3">
+                <div class="card d-block centermargin" style="width: 18rem;">
+                    <img src="images/pothos.png" class="card-img-top" alt="Pothos">
+                    <div class="card-body">
+                      <p class="card-text">Pothos likes bright indirect light and to be watered a little less than once a week.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-12 col-lg-4 pb-3">
+                <div class="card d-block centermargin" style="width: 18rem;">
+                    <img src="images/monstera.png" class="card-img-top" alt="Monstera">
+                    <div class="card-body">
+                      <p class="card-text">Monsteras get big and prefer bright indirect light and to be watered around once a week.</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+        <div class="row pt-3 pb-5">
+            <div class="col-12 col-lg-4 pb-3">
+                <div class="card d-block centermargin" style="width: 18rem;">
+                    <img src="images/alocasia.png" class="card-img-top" alt="Alocasia">
+                    <div class="card-body">
+                      <p class="card-text">Alocasias like medium to bright indirect light and to be watered once a week, sometimes more.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-12 col-lg-4 pb-3">
+                <div class="card d-block centermargin" style="width: 18rem;">
+                    <img src="images/philodendron.png" class="card-img-top" alt="Philodendron">
+                    <div class="card-body">
+                      <p class="card-text">Philodendrons like medium to bright indirect light and to be watered around once every 2 weeks.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-12 col-lg-4 pb-3">
+                <div class="card d-block centermargin" style="width: 18rem;">
+                    <img src="images/succulents.png" class="card-img-top" alt="Succulents">
+                    <div class="card-body">
+                      <p class="card-text">Succulents like bright light and want to be watered around once a month.</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
 
     </div>
 
