--- a/plants.html
+++ b/plants.html
@@ -46,7 +46,7 @@
                                 Seasons
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Sod</a>
+                                <a class="dropdown-item" href="sod.html">Sod</a>
                                 <a class="dropdown-item" href="#">Cemetary</a>
                             </div>
                         </li>
