--- a/sod.html
+++ b/sod.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Charlie's Grave Blankets</title>
+    <title>Charlie's Plants</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -46,7 +46,7 @@
                                 Seasons
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="sod.html">Sod</a>
+                                <a class="dropdown-item" href="#">Sod</a>
                                 <a class="dropdown-item" href="#">Cemetary</a>
                             </div>
                         </li>
@@ -59,43 +59,53 @@
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
 
-    <div class="row justify-content-center bg-success pt-3 pb-3">
-        <div class="col-4">
-          <img src="images/small_flat.webp" alt="small flat grave blanket" height="250px" class="d-block centermargin">
-        </div>
-        <div class="col-4 text-center">
-          <h2 class="pb-4">Small Flat</h2>
-          <p>
-            Our most popular blanket. Shows great at the Cemtery as it's full of poinsettias and decorations. Fits the standard size grave stone.
-          </p>
-          <p class="fw-bold">$24.99</p>
-        </div>
-    </div>
+        <div class="pt-3 pb-3">
+            <h1 class="text-center">Sod</h1>
+            <p class="text-center">Our SOD is one of our most prideful items that we carry. The results and feedback from customers (and landscapers/contractors) have been 100% positive with our current North New Jersey grower. We know we have something special.</p>
+            <p class="text-center">We know SOD is a long-term investment that homeowners make, that is why we bring in SOD that is cut thick with an established root system. This allows the SOD to stay hydrated longer and allows the roots to continue to grow right into your existing soil. Not only do the roots grow quick, but because there are so many roots intact, the color quality of the grass stays vibrant as it grows.</p>
+            <p class="text-center">Not only do we carry the best SOD you will find, but we always will explain to you in-depth how to take care of your new lawn. We will show you the correct steps to take to get your new lawn established and how to keep it flourishing throughout the rest of the year. </p>
 
-    <div class="row justify-content-center bg-success pt-3 pb-3">
-        <div class="col-4 text-center">
-            <h2 class="pb-4">Medium Flat</h2>
-            <p>
-                Longer than the 'Small Flat' with more decorations. Great for a double stone plot.
-            </p>
-            <p class="fw-bold">$34.99</p>
-          </div>
-        <div class="col-4">
-          <img src="images/med_flat.webp" alt="medium flat grave blanket" height="250px" class="d-block centermargin">
         </div>
-    </div>
 
-    <div class="row justify-content-center bg-success pt-3 pb-5">
-        <div class="col-4">
-          <img src="images/Large_Pine.webp" alt="Large Pine Puff grave blanket" height="250px" class="d-block centermargin">
+        <div class="row justify-content-center bg-success pt-3 pb-3">
+            <div class="col-4">
+              <img src="images/sod1.webp" alt="Sod on pallets" height="250px" width="250px" class="d-block centermargin">
+            </div>
+            <div class="col-4 text-center">
+              <h2 class="pb-4">Sod</h2>
+              <p>
+                Our Sod is cut 5 feet by 2 feet which makes each roll of sod 10 square feet.
+              </p>
+              <p class="fw-bold">$7.99 per roll</p>
+            </div>
         </div>
-        <div class="col-4 text-center">
-          <h2 class="pb-4">Large Pine Puff</h2>
-          <p>
-            Largest size blanket we make aside from our 4-5' cross. Same look as the medium Pine blankets, just longer with extra decorations.
-          </p>
-          <p class="fw-bold">$79.99</p>
+    
+        <div class="row justify-content-center bg-success pt-3 pb-3">
+            <div class="col-4 text-center">
+                <h2 class="pb-4">Orders</h2>
+                <p>
+                    Our sod is delivered every week on Saturday morning, call us to put in an order!
+                </p>
+                <p class="fw-bold">201-998-8206</p>
+              </div>
+            <div class="col-4">
+              <img src="images/sod2.webp" alt="close-up of sod" height="250px" width="250px" class="d-block centermargin">
+            </div>
         </div>
+    
+        <div class="row justify-content-center bg-success pt-3 pb-5">
+            <div class="col-4">
+              <img src="images/sod3.webp" alt="Rolled out sod" height="250px" width="250px" class="d-block centermargin">
+            </div>
+            <div class="col-4 text-center">
+              <h2 class="pb-4">Cut Fresh</h2>
+              <p>
+                The sod we bring in is always cut the day of. Pre-Orders get first priority.
+              </p>
+              <p class="fw-bold">201-998-8206</p>
+            </div>
+        </div>
+
     </div>
 
 </div>
