--- a/sod.html
+++ b/sod.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Charlie's Plants</title>
+    <title>Charlie's Sod</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -46,8 +46,8 @@
                                 Seasons
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Sod</a>
-                                <a class="dropdown-item" href="#">Cemetary</a>
+                                <a class="dropdown-item" href="sod.html">Sod</a>
+                                <a class="dropdown-item" href="cemetary.html">Cemetery</a>
                             </div>
                         </li>
                     </ul>
@@ -102,7 +102,7 @@
               <p>
                 The sod we bring in is always cut the day of. Pre-Orders get first priority.
               </p>
-              <p class="fw-bold">201-998-8206</p>
+              <p class="fw-bold">CharliesNursery@gmail.com</p>
             </div>
         </div>
 
