--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                             </a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="sod.html">Sod</a>
-                                <a class="dropdown-item" href="#">Cemetary</a>
+                                <a class="dropdown-item" href="cemetary.html">Cemetery</a>
                             </div>
                         </li>
                     </ul>
