--- a/cemetary.html
+++ b/cemetary.html
@@ -46,8 +46,8 @@
                                 Seasons
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Sod</a>
-                                <a class="dropdown-item" href="#">Cemetery</a>
+                                <a class="dropdown-item" href="sod.html">Sod</a>
+                                <a class="dropdown-item" href="cemetary.html">Cemetery</a>
                             </div>
                         </li>
                     </ul>
