--- a/grave.html
+++ b/grave.html
@@ -59,6 +59,14 @@
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
 
+        <div class="pt-3 pb-3">
+            <h1 class="text-center">The Best Grave Blankets Around!</h1>
+            <p class="text-center">All our blankets are hand-made right here at the nursery by us for you. Same people that made them for years at Arlington Florist on Schuyler Ave.</p>
+            <p class="text-center">Boy Scouts, Schools, Churches, Fundraisers, Cemeteries & Businesses welcomed!</p>
+            <p class="text-center">Give us a call 201-998-8206 or e-mail us at CharliesNursery@gmail.com</p>
+
+        </div>
+
     <div class="row justify-content-center bg-success pt-3 pb-3">
         <div class="col-4">
           <img src="images/small_flat.webp" alt="small flat grave blanket" height="250px" class="d-block centermargin">
