--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link href="css/main.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="bg-success">
 <div class="container-fluid">
     <div class="row">
             <nav class="navbar navbar-expand-md
@@ -57,7 +57,16 @@
             <p class="d-inline-block fat">275 River Road, North Arlington, NJ</p>
             <p class="d-inline-block soap">CharliesNursery@gmail.com 201-998-8206</p>
         </div>
-        <div class="container">
+
+        <div class="pt-3 pb-3">
+            <h1 class="text-center">Contact Us Today!</h1>
+            <p class="text-center">Calling us is the best way to reach out, its fast and easy to check what is in stock or when we will be recieving more items.</p>
+            <p class="text-center">Emailing is recommended when placing orders or setting up a fundraiser.</p>
+            <p class="text-center">Give us a call 201-998-8206 or e-mail us at CharliesNursery@gmail.com</p>
+
+        </div>
+
+        <div class="container bg-success">
           <div class="row">
             <form action="">
                 <div class="form-group">
