--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             <h1 class="text-center">Contact Us Today!</h1>
             <p class="text-center">Calling us is the best way to reach out, its fast and easy to check what is in stock or when we will be recieving more items.</p>
             <p class="text-center">Emailing is recommended when placing orders or setting up a fundraiser.</p>
-            <p class="text-center">Give us a call 201-998-8206 or e-mail us at CharliesNursery@gmail.com</p>
+            <p class="text-center">Give us a call at 201-998-8206 or e-mail us at CharliesNursery@gmail.com</p>
 
         </div>
 
