--- a/cemetary.html
+++ b/cemetary.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- DEVELOPER:Louis Visotcky, IS117-003, Fall 2023 -->
     <meta charset="UTF-8">
     <title>Charlie's Cemetery Placements</title>
     <!-- CSS only -->
